# pbr-renderer-project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
cmake/: assimp.cmake  glfw.cmake  spdlog.cmake
include/app/: app.hpp
include/camera/: camera.hpp
include/common/: controller.hpp  listener.hpp
include/constants/: camera_constansts.hpp  ibl_constants.hpp  layout_constants.hpp  light_constants.hpp  material_constansts.hpp  model_constants.hpp  offscreen_rendering_constants.hpp
include/features/: camera_feature.hpp  feature.hpp  ibl_feature.hpp  light_feature.hpp  material_feature.hpp  model_feature.hpp  offscreen_rendering_feature.hpp
include/gl_context/: gl_context.hpp
include/gl_objects/: cube_texture.hpp  frame_buffer_object.hpp  gl_object.hpp  index_buffer_object.hpp  render_buffer_object.hpp  texture.hpp  vertex_array_object.hpp  vertex_buffer_object.hpp
include/glfw_impl/: glfw_impl.hpp
include/light/: light.hpp
include/mesh/: mesh.hpp
include/model/: model.hpp
include/renderable_objects/: cube.hpp  primitive.hpp  quad.hpp  renderable_object.hpp  sphere.hpp
include/shader/: shader.hpp
include/ui_components/: check_box.hpp  color_edit.hpp  combo.hpp  drag_float.hpp  drag_float3.hpp  ui_component.hpp
include/ui_containers/: camera_ui.hpp  ibl_ui.hpp  light_ui.hpp  material_ui.hpp  model_ui.hpp
include/ui_manager/: ui_manager.hpp
resources/shaders/: background.fs  background.vs  brdf.fs  brdf.vs  cubemap.vs  equirectangular_to_cubemap.fs  irradiance_convolution.fs  pbr.fs  pbr.vs  prefilter.fs
src/: main.cpp
src/app/: app.cpp
src/camera/: camera.cpp
src/features/: camera_feature.cpp  ibl_feature.cpp  light_feature.cpp  material_feature.cpp  model_feature.cpp  offscreen_rendering_feature.cpp
src/gl_context/: gl_context.cpp
src/gl_objects/: cube_texture.cpp  frame_buffer_object.cpp  index_buffer_object.cpp  render_buffer_object.cpp  texture.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
src/glfw_impl/: glfw_impl.cpp
src/light/: light.cpp
src/model/: model.cpp
src/renderable_objects/: cube.cpp  quad.cpp  sphere.cpp
src/shader/: shader.cpp
src/ui_components/: check_box.cpp  color_edit.cpp  combo.cpp  drag_float.cpp  drag_float3.cpp
src/ui_containers/: camera_ui.cpp  ibl_ui.cpp  light_ui.cpp  material_ui.cpp  model_ui.cpp
src/ui_manager/: ui_manager.cpp
